# transit_model

./: .dockerignore  .gitignore  .gitmodules  .mergify.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile_deb11  Dockerfile_deb12  Makefile  README.md  config.yml  docker-compose.yml  downloadable_model_graph.md  public
.github/: dependabot.yml
.github/workflows/: auto-tagging.yml  ci.yml  continuous-integration-deb11.yml  continuous-integration-deb12.yml  continuous-integration.yml  (+3 more)
benches/: apply_rules.rs  filter_ntfs.rs  read_gtfs.rs  read_kv1.rs  read_ntfs.rs  read_transxchange.rs
collection/: Cargo.toml  README.md
collection/src/: collection.rs  lib.rs
documentation/: common_ntfs_rules.md  deprecated_ntfs_fares_reading.md  deprecated_ntfs_fares_writing.md  fares_internal_format.md  gtfs_to_ntfs_specs.md  ntfs_to_gtfs_specs.md  ntfs_to_netex_france_specs.md
examples/: README.md  gtfs_reader.rs  ntfs_crawler.rs  test.rs
fare_conversion/: Cargo.toml
fare_conversion/src/: main.rs
get-corresponding-derive/: Cargo.toml
gtfs2netexfr/: Cargo.toml  README.md
gtfs2netexfr/src/: main.rs
gtfs2netexfr/tests/: gtfs2netexfr.rs
gtfs2ntfs/: Cargo.toml  README.md
gtfs2ntfs/src/: main.rs
gtfs2ntfs/tests/: gtfs2ntfs.rs
gtfs2ntfs/tests/fixtures/gtfs_flex_v3_bois_le_roi/: calendar.txt  feed_info.txt  location_group_stops.txt  stop_times.txt  stops.txt  trips.txt
gtfs2ntfs/tests/fixtures/output/: booking_rule_links.txt  calendar.txt  companies.txt  contributors.txt  datasets.txt  feed_infos.txt  lines.txt  networks.txt  object_codes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
model-builder/: Cargo.toml  README.md
model-builder/src/: builder.rs  lib.rs
ntfs2gtfs/: Cargo.toml  README.md
ntfs2gtfs/src/: lib.rs  main.rs
ntfs2gtfs/tests/: ntfs2gtfs.rs
ntfs2gtfs/tests/fixtures/access_and_pathways/input_ntfs_with_access_and_pathways/: calendar.txt  commercial_modes.txt  companies.txt  contributors.txt  datasets.txt  equipments.txt  feed_infos.txt  lines.txt  networks.txt  object_codes.txt  pathways.txt  physical_modes.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  trip_properties.txt  trips.txt
ntfs2gtfs/tests/fixtures/access_and_pathways/output_gtfs_with_access_and_pathways/: stops.txt
ntfs2gtfs/tests/fixtures/input/: calendar_dates.txt  feed_infos.txt  geometries.txt  lines.txt  networks.txt  stop_times.txt  stops.txt  trips.txt
ntfs2gtfs/tests/fixtures/input_ntfs_with_fare_urls/: feed_infos.txt  lines.txt  networks.txt  physical_modes.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
ntfs2gtfs/tests/fixtures/input_ntfs_with_lines_locked/: calendar.txt  commercial_modes.txt  companies.txt  datasets.txt  feed_infos.txt  geometries.txt  lines.txt  networks.txt  object_codes.txt  object_locks.txt  physical_modes.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
ntfs2gtfs/tests/fixtures/input_split_route_by_mode/: calendar.txt  companies.txt  contributors.txt  datasets.txt  feed_infos.txt  lines.txt  networks.txt  physical_modes.txt  routes.txt  stop_times.txt  stops.txt  transfers.txt  trips.txt
ntfs2gtfs/tests/fixtures/output/: agency.txt  attributions.txt  routes.txt  shapes.txt  stop_times.txt  stops.txt  ticketing_deep_links.txt  trips.txt
ntfs2gtfs/tests/fixtures/output_extended_route/: routes.txt
ntfs2gtfs/tests/fixtures/output_gtfs_pickup_drop_off_windows/: agency.txt  attributions.txt  booking_rules.txt  calendar.txt  stop_extensions.txt  stops.txt  transfers.txt
ntfs2gtfs/tests/fixtures/output_gtfs_with_fare_url_deeplinks/: agency.txt  ticketing_deep_links.txt
ntfs2gtfs/tests/fixtures/output_gtfs_with_lines_locked/: object_codes_extension.txt  routes.txt
ntfs2gtfs/tests/fixtures/output_route_shortname_with_mode/: routes.txt
ntfs2gtfs/tests/fixtures/output_split_route_by_mode/: routes.txt
ntfs2gtfs/tests/fixtures/output_split_route_by_mode_extended/: routes.txt
ntfs2gtfs/tests/fixtures/pickup_drop_off_windows/input_ntfs/: booking_rules.txt  lines.txt  networks.txt
ntfs2gtfs/tests/fixtures/pickup_drop_off_windows/output_gtfs/: routes.txt  stop_times.txt  stops.txt  trips.txt
ntfs2gtfs/tests/fixtures/stop_and_object_codes_extension/: object_codes_extension.txt
ntfs2netexfr/: Cargo.toml  README.md
ntfs2netexfr/src/: main.rs
ntfs2netexfr/tests/: ntfs2netexfr.rs
ntfs2ntfs/: Cargo.toml  README.md
ntfs2ntfs/src/: main.rs
ntfs2ntfs/tests/: ntfs2ntfs.rs
relations/: Cargo.toml  README.md
relations/src/: lib.rs  relations.rs
restrict-validity-period/: Cargo.toml  README.md
restrict-validity-period/src/: main.rs
src/: add_prefix.rs  apply_rules.rs  calendars.rs  collection.rs  common_format.rs  configuration.rs  downloadable_model.rs  file_handler.rs  gtfs.rs  lib.rs  merge_stop_areas.rs  merge_with.rs  model.rs  model_builder.rs  ntfs.rs  objects.rs  parser.rs  physical_modes_utils.rs  read_utils.rs  relations.rs  report.rs  serde_utils.rs  syntus_fares.rs  test_utils.rs  transfers.rs  utils.rs  validity_period.rs  version_utils.rs  vptranslator.rs  wgs84.rs  xml_builder.rs
tests/: apply_rules.rs  enrich_with_hellogo_fares.rs  filter_ntfs.rs  gtfs2ntfs.rs  gtfs_reader.rs  merge_ntfs.rs  merge_stop_areas.rs  netexidf2ntfs.rs  ntfs2gtfs.rs  read_gtfs.rs  read_kv1.rs  read_netex.rs  read_ntfs.rs  read_syntus_fares.rs  read_transxchange.rs  restrict_validity_period.rs  transfers.rs  utils.rs  vptranslator.rs  write_netex_france.rs
transit_model/: Cargo.toml
transit_model_procmacro/: Cargo.toml  README.md
transit_model_procmacro/src/: lib.rs
transit_model_procmacro/tests/: 01-get-corresponding.rs  02-invalid-weight.rs  02-invalid-weight.stderr  03-non-supported-argument.rs  03-non-supported-argument.stderr  tests.rs
transit_model_python/: Cargo.toml  example.py  example.text  example_simple.py  pyproject.toml  python_README.md  python_test.py
transit_model_python/.cargo/: config.toml
transit_model_python/src/: lib.rs
transit_model_python/src/modules/: downloadable_model.rs  mod.rs  python_transit_model.rs
(+1062 files in other folders)
