[package]
authors = ["Hove <core@hove.com>", "Guillaume Pinot <texitoi@texitoi.eu>"]
name = "transit_model"
version = "0.55.0"
license = "AGPL-3.0-only"
description = "Transit data management"
repository = "https://github.com/hove-io/transit_model"
keywords = ["ntfs", "gtfs", "netex", "navitia", "transit"]
categories = ["data-structures", "encoding", "parser-implementations"]
edition = "2018"
readme = "README.md"
exclude = [
	".gitignore",
	".mergify.yml",
	"CONTRIBUTING.md",
	"README.md",
	"examples/",
	"src/documentation/",
	"tests/",
]

[workspace]
members = [
	"gtfs2netexfr",
	"gtfs2ntfs",
	"ntfs2gtfs",
	"ntfs2netexfr",
	"model-builder",
	"ntfs2ntfs",
	"restrict-validity-period",
]

[features]
xmllint = ["proj"]
gtfs = []
parser = []

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = { version = "0.7", features = ["serde"] }
csv = "1"
derivative = "2"
geo = "0.23"
iso4217 = "0.3"
lazy_static = "1"
md5 = "0.7"
# do not upgrade to 'minidom:0.13.0' (too strict on namespaces and no XML comment support)
# https://github.com/hove-io/transit_model/pull/746
minidom = "0.12"
minidom_ext = "1"
minidom_writer = "1"
num-traits = "0.2"
pretty_assertions = "1"
proj = { version = "0.27", optional = true } # libproj version used by 'proj' crate must be propagated to CI and makefile
relational_types = "2"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skip_error = { version = "3.1", features = ["tracing"] }
tempfile = "3"
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
typed_index_collection = "2"
walkdir = "2"
wkt = "0.10"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
git-version = "0.3"

[[test]]
name = "write_netex_france"
path = "tests/write_netex_france.rs"
required-features = ["proj"]

[dev-dependencies]
approx = "0.5"
log = "0.4"
rust_decimal_macros = "1"
testing_logger = "0.1"
transit_model_builder = { path = "./model-builder"}
