[package]
authors = ["Hove <core@hove.com>", "Guillaume Pinot <texitoi@texitoi.eu>"]
name = "transit_model"
version = "0.78.2"
license = "AGPL-3.0-only"
description = "Transit data management"
repository = "https://github.com/hove-io/transit_model"
keywords = ["ntfs", "gtfs", "netex", "navitia", "transit"]
categories = ["data-structures", "encoding", "parser-implementations"]
edition = "2018"
readme = "README.md"
exclude = [
	".gitignore",
	".gitmodules",
	"CONTRIBUTING.md",
	"Dockerfile",
	"Makefile",
	"README.md",
	"examples/",
	"documentation/",
	"tests/",
]

[workspace]
members = [
	"gtfs2netexfr",
	"gtfs2ntfs",
	"ntfs2gtfs",
	"ntfs2netexfr",
	"ntfs2ntfs",
	"restrict-validity-period",
]

[features]
xmllint = ["proj"]
gtfs = []
parser = []
proj = ["dep:proj", "dep:quick-xml"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = { version = "0.10", features = ["serde"] }
csv = "1"
derivative = "2"
geo = "0.32"
iso4217 = "0.3"
lazy_static = "1"
md5 = "0.8"
num-traits = "0.2"
pretty_assertions = "1"
proj = { version = "0.31", optional = true } # libproj version used by 'proj' crate must be propagated to CI and makefile
# quick-xml is used for writing NeTEx files (see xml_builder module in netex_france)
quick-xml = { version = "0.39", optional = true }
relational_types = { git = "https://github.com/hove-io/relational_types", tag = "v2"}
rstar = "0.12"
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
skip_error = { git = "https://github.com/hove-io/skip_error", tag = "v3", features = ["tracing"]}
tempfile = "3"
thiserror = "2"
tracing = { version = "0.1", features = ["log"] }
typed_index_collection = { git = "https://github.com/hove-io/typed_index_collection", tag = "v2"}
walkdir = "2"
wkt = "0.14"
zip = { version = "7", default-features = false, features = ["deflate"] }
git-version = "0.3"

[[test]]
name = "write_netex_france"
path = "tests/write_netex_france.rs"
required-features = ["proj"]

[dev-dependencies]
approx = "0.5"
log = "0.4"
rust_decimal_macros = "1"
testing_logger = "0.1"
