[package]
name = "transit_model_builder"
version = "0.3.0"
authors = ["Antoine Desbordes <antoine.desbordes@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"
description = "A crate to easily build a transit_model::Model"

[dependencies]
# Swap the next two lines when publishing
# transit_model = "0.6"
transit_model = { path = "../" }
# transit_model_collection = "0.1"
transit_model_collection = { path = "../collection" }
