[package]
name = "transit_model_builder"
version = "0.3.0"
authors = ["Antoine Desbordes <antoine.desbordes@gmail.com>"]
edition = "2018"
license = "AGPL-3.0-only"
description = "A crate to easily build a transit_model::Model"
repository = "https://github.com/hove-io/transit_model"
homepage = "https://github.com/hove-io/transit_model"
readme = "README.md"
categories = ["data-structures"]
keywords = ["transit"]

[dependencies]
# Swap the next two lines when publishing
# transit_model = "0.6"
transit_model = { path = "../" }
typed_index_collection = { git = "https://github.com/hove-io/typed_index_collection", tag = "v2.3"}
