[package]
name = "ntfs2gtfs"
version = "1.1.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
license = "AGPL-3.0-only"
description = "Binary to convert Transit data from NTFS format to GTFS"
edition = "2018"
repository = "https://github.com/CanalTP/transit_model"
homepage = "https://github.com/CanalTP/transit_model"
readme = "README.md"
categories = ["command-line-utilities", "data-structures", "encoding", "parser-implementations"]
keywords = ["gtfs", "ntfs", "transit"]

[dependencies]
anyhow = "1"
structopt = "0.3"
tracing = { version = "0.1", features = ["log", "release_max_level_info"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
transit_model = { path = "../" }
lazy_static = "1"

[dev-dependencies]
assert_cmd = "1"
tempfile = "3"
