[package]
name = "ntfs2gtfs"
version = "1.1.0"
authors = ["Hove <core@hove.com>"]
license = "AGPL-3.0-only"
description = "Binary to convert Transit data from NTFS format to GTFS"
edition = "2018"
repository = "https://github.com/hove-io/transit_model"
homepage = "https://github.com/hove-io/transit_model"
readme = "README.md"
categories = ["command-line-utilities", "data-structures", "encoding", "parser-implementations"]
keywords = ["gtfs", "ntfs", "transit"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1", features = ["log", "release_max_level_info"] }
tracing-subscriber = "0.3"
transit_model = { path = "../" }
lazy_static = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
