[package]
name = "ntfs2netexfr"
version = "1.0.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
license = "AGPL-3.0-only"
description = "Binary to convert Transit data from NTFS format to NeTEx France"
edition = "2018"
repository = "https://github.com/hove-io/transit_model"
homepage = "https://github.com/hove-io/transit_model"
readme = "README.md"
categories = ["command-line-utilities", "data-structures", "encoding", "parser-implementations"]
keywords = ["ntfs", "netex", "transit"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
structopt = "0.3"
tracing = { version = "0.1", features = ["log", "release_max_level_info"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
transit_model = { path = "../", features = ["proj"] }
lazy_static = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
