[package]
name = "relations"
description = "Manage collection of objects"
version = "0.1.0"
authors = ["Kisio Digital <team.coretools@kisio.org>"]
edition = "2018"
license = "AGPL-3.0"
repository = "https://github.com/CanalTP/transit_model"
keywords = ["relations", "collection"]

[dependencies]
derivative = "1.0.3"
failure = "0.1.5"
collection = { path = "../collection" }
transit_model_procmacro = { path = "../transit_model_procmacro" }