[package]
name = "transit_model_relations"
description = " Modeling the relations between objects"
version = "0.1.0"
authors = ["Kisio Digital <team.coretools@kisio.org>"]
edition = "2018"
license = "AGPL-3.0-only"
repository = "https://github.com/CanalTP/transit_model"
keywords = ["relations", "collection"]

[dependencies]
derivative = "1.0.3"
failure = "0.1.5"
transit_model_collection = { version = "0.1", path = "../collection" }

[dev-dependencies]
transit_model_procmacro = { version = "0.1", path = "../transit_model_procmacro" }
