[package]
name = "restrict-validity-period"
version = "1.0.0"
authors = ["Kisio Digital <team.coretools@kisio.com>"]
license = "AGPL-3.0-only"
description = "Binary to restrict the validity period of a NTFS and purge out-of-date data."
edition = "2018"
repository = "https://github.com/CanalTP/transit_model"
homepage = "https://github.com/CanalTP/transit_model"
readme = "README.md"
categories = ["command-line-utilities", "data-structures", "encoding", "parser-implementations"]
keywords = ["ntfs", "transit"]

[dependencies]
chrono = "0.4"
structopt = "0.3"
tracing = { version = "0.1", features = ["log", "release_max_level_info"] }
tracing-log = "0.1"
tracing-subscriber = "0.2"
transit_model = { path = "../" }
