[package]
name = "transit_model_python"
version = "0.1.0"
edition = "2021"
description = "A Python library for communicating with the transit_model Rust library"
license = "AGPL-3.0-only"
repository = "https://github.com/hove-io/transit_model/transit_model_python"
keywords = ["ntfs", "gtfs", "netex", "navitia", "transit"]
categories = ["data-structures", "encoding", "parser-implementations"]
readme = "python_README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "transit_model_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py38"] }
transit_model = { path = "../", features = ["downloadable"] }
typed_index_collection = { git = "https://github.com/hove-io/typed_index_collection", tag = "v2" }
relational_types = { git = "https://github.com/hove-io/relational_types", tag = "v2" }
tokio = { version = "1.0", features = ["full"] }

